# custom-scripts

./: custom-run.sh  entrypoint  install.sh  pyproject.toml
helpers/: __init__.py  general_helpers.py  module_helpers.py  xdg_helpers.py
modules/chezmoi/: install-module.sh  sym
modules/niri/: __init__.py  dynamic-float.py  dynamic_float.py  install-module.sh  launch-music.py  launch_music.py  main.py  niri_helpers.py  pyproject.toml  window-glancer.py  window_glancer.py
modules/theme/: __init__.py  apply_zellij_theme.py  install-module.sh  main.py  pyproject.toml  wallpaper_changed.py
niri/: dynamic-float.py  launch-music.py  niri_helpers.py  pyproject.toml  window-glancer.py
